# buflog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpplint.sh
.github/workflow/: build.yml
.github/workflows/: main.yml  test  test.yml
include/: buflog.h
src/: CMakeLists.txt  buflog.cpp  errorutil.h  ipcsharedbuffer.cpp  ipcsharedbuffer.h  isharedbuffer.h  sharedbuffer.cpp  sharedbuffer.h
tests/: CMakeLists.txt  buflog_test.cpp  ipcsharedbuffer_test.cpp  setup_gtest.sh  sharedbuffer_test.cpp
